[package]
name = "rustix-linux-procfs"
version = "0.1.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Utilities for opening Linux procfs files and directories"
documentation = "https://docs.rs/rustix-linux-procfs"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/rustix-linux-procfs"
edition = "2021"
keywords = ["linux", "procfs"]
categories = ["os::unix-apis"]
include = ["src", "Cargo.toml", "COPYRIGHT", "LICENSE*", "/*.md"]
rust-version = "1.63"

[dependencies]
rustix = { version = "1.0.0", default-features = false, features = ["alloc", "fs"] }
once_cell = "1.5.2"

[features]
default = ["std"]
std = ["rustix/std"]

[dev-dependencies]
rustix = { version = "1.0.0", default-features = false, features = ["std"] }
